--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Colectivo ArteVivo</title>
+  <title>Colectivo Legionarios</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -328,7 +328,7 @@ nav .logo img {
   </section>
 
   <footer>
-    <p>&copy; 2025 Colectivo ArteVivo - Todos los derechos reservados</p>
+    <p>&copy; 2025 Colectivo Legionarios - Todos los derechos reservados</p>
     <div class="redes">
       <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
       <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
