--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .header-imagen {
-  background-image: url('fondoP.png'); /* reemplaza con tu ruta */
+  background-image: url('fondoP.PNG'); /* reemplaza con tu ruta */
   background-size: cover;         /* llena todo el espacio sin espacios vacíos */
   background-position: center;    /* centra la imagen */
   background-repeat: no-repeat;   /* no se repite */
